--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=trip-service
-spring.data.mongodb.uri=mongodb://admin:admin123@localhost:27017/trip-db?authSource=admin&retryWrites=true&w=majority
-spring.kafka.bootstrap-servers=localhost:29092
+spring.data.mongodb.uri=mongodb://admin:admin123@mongo:27017/trip-db?authSource=admin&retryWrites=true&w=majority
+spring.kafka.bootstrap-servers=kafka:9092
 auto.create.topics.enable=true
 server.port=3032
 
